@@ -1,9 +1,9 @@
 package com.cta4j.twitter.service;
 
-import com.cta4j.exception.TwitterServiceException;
-import com.cta4j.service.SecretService;
-import com.cta4j.twitter.dto.Response;
+import com.cta4j.twitter.exception.TwitterException;
+import com.cta4j.secretsmanager.service.SecretService;
 import com.cta4j.twitter.dto.Tweet;
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.hc.client5.http.classic.methods.HttpPost;
@@ -26,8 +26,8 @@ import java.util.Map;
 import java.util.Objects;
 
 @Service
-public final class TwitterService {
-    private static final Logger log = LoggerFactory.getLogger(TwitterService.class);
+public final class TweetService {
+    private static final Logger log = LoggerFactory.getLogger(TweetService.class);
 
     private static final String SCHEME = "https";
     private static final String HOST_NAME = "api.x.com";
@@ -39,7 +39,7 @@ public final class TwitterService {
     private final TokenRefreshService tokenRefreshService;
 
     @Autowired
-    public TwitterService(
+    public TweetService(
         SecretService secretService,
         CloseableHttpClient httpClient,
         ObjectMapper objectMapper,
@@ -63,7 +63,7 @@ public final class TwitterService {
         } catch (URISyntaxException e) {
             String message = "Failed to build URI for create tweet endpoint";
 
-            throw new TwitterServiceException(message, e);
+            throw new TwitterException(message, e);
         }
 
         return uri;
@@ -77,15 +77,20 @@ public final class TwitterService {
         return String.format("Bearer %s", accessToken);
     }
 
-    private StringEntity buildStringEntity(String text) {
-        Map<String, String> requestMap = Collections.singletonMap("text", text);
+    private StringEntity buildStringEntity(String text, String mediaId) {
+        Map<String, ?> requestMap = Map.of(
+            "text", text,
+            "media", Map.of(
+                "media_ids", Collections.singletonList(mediaId)
+            )
+        );
 
         String requestBody;
 
         try {
             requestBody = this.objectMapper.writeValueAsString(requestMap);
         } catch (JsonProcessingException e) {
-            throw new TwitterServiceException("Failed to serialize tweet text to JSON", e);
+            throw new TwitterException("Failed to serialize tweet text to JSON", e);
         }
 
         ContentType contentType = ContentType.APPLICATION_JSON.withCharset(StandardCharsets.UTF_8);
@@ -93,7 +98,7 @@ public final class TwitterService {
         return new StringEntity(requestBody, contentType);
     }
 
-    private HttpPost buildRequest(String text) {
+    private HttpPost buildRequest(String text, String mediaId) {
         URI uri = this.buildUri();
 
         HttpPost httpPost = new HttpPost(uri);
@@ -104,41 +109,43 @@ public final class TwitterService {
 
         httpPost.addHeader(HttpHeaders.ACCEPT, ContentType.APPLICATION_JSON);
 
-        StringEntity stringEntity = this.buildStringEntity(text);
+        StringEntity stringEntity = this.buildStringEntity(text, mediaId);
 
         httpPost.setEntity(stringEntity);
         
         return httpPost;
     }
 
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    private record ResponseBody(Tweet data) {}
+
+    private record Response(int statusCode, ResponseBody body) {}
+
     private Response handleResponse(ClassicHttpResponse httpResponse) throws IOException, ParseException {
         int statusCode = httpResponse.getCode();
 
-        if (statusCode != HttpStatus.SC_CREATED) {
-            return new Response(statusCode, null);
-        }
-
         HttpEntity entity = httpResponse.getEntity();
 
-        String responseBody = EntityUtils.toString(entity);
+        String entityString = EntityUtils.toString(entity);
 
-        Tweet tweet;
+        ResponseBody body;
 
         try {
-            tweet = this.objectMapper.readValue(responseBody, Tweet.class);
+            body = this.objectMapper.readValue(entityString, ResponseBody.class);
         } catch (JsonProcessingException e) {
             String message = "Failed to parse create tweet response";
 
-            throw new TwitterServiceException(message, e);
+            throw new TwitterException(message, e);
         }
 
-        return new Response(statusCode, tweet);
+        return new Response(statusCode, body);
     }
     
-    public Tweet postTweet(String text) {
+    public Tweet postTweet(String text, String mediaId) {
         Objects.requireNonNull(text);
+        Objects.requireNonNull(mediaId);
 
-        HttpPost httpPost = this.buildRequest(text);
+        HttpPost httpPost = this.buildRequest(text, mediaId);
 
         Response response;
 
@@ -147,39 +154,41 @@ public final class TwitterService {
         } catch (IOException e) {
             String message = "Failed to execute create tweet request";
 
-            throw new TwitterServiceException(message, e);
+            throw new TwitterException(message, e);
         }
 
         int statusCode = response.statusCode();
 
         if (statusCode == HttpStatus.SC_CREATED) {
-            return response.data();
+            return response.body.data;
         } else if (statusCode != HttpStatus.SC_UNAUTHORIZED) {
-            String message = String.format("Failed to create tweet, status code: %d", response.statusCode());
+            String message = String.format("Failed to create tweet, status code: %d", statusCode);
 
-            throw new TwitterServiceException(message);
+            throw new TwitterException(message);
         }
 
         this.tokenRefreshService.refreshAccessToken();
 
-        HttpPost retryHttpPost = this.buildRequest(text);
+        HttpPost retryHttpPost = this.buildRequest(text, mediaId);
+
+        Response retryResponse;
 
         try {
-            response = this.httpClient.execute(retryHttpPost, this::handleResponse);
+            retryResponse = this.httpClient.execute(retryHttpPost, this::handleResponse);
         } catch (IOException e) {
             String message = "Failed to execute create tweet request after refreshing access token";
 
-            throw new TwitterServiceException(message, e);
+            throw new TwitterException(message, e);
         }
 
-        int retryStatusCode = response.statusCode();
+        int retryStatusCode = retryResponse.statusCode();
 
         if (retryStatusCode != HttpStatus.SC_CREATED) {
             String message = String.format("Failed to create tweet after retrying, status code: %d", retryStatusCode);
 
-            throw new TwitterServiceException(message);
+            throw new TwitterException(message);
         }
 
-        return response.data();
+        return response.body.data;
     }
 }
